@@ -974,7 +974,7 @@ double nm_device_get_frequency (NMDevice *dev)
 	{
 		struct iwreq		wrq;
 
-		err = iw_set_ext (sk, nm_device_get_iface (dev), SIOCGIWFREQ, &wrq);
+		err = iw_get_ext (sk, nm_device_get_iface (dev), SIOCGIWFREQ, &wrq);
 		if (err >= 0)
 			freq = iw_freq2float (&wrq.u.freq);
 		if (err == -1)
@@ -1086,7 +1086,7 @@ int nm_device_get_bitrate (NMDevice *dev)
 	sk = iw_sockets_open ();
 	if (sk >= 0)
 	{
-		err = iw_set_ext (sk, nm_device_get_iface (dev), SIOCGIWRATE, &wrq);
+		err = iw_get_ext (sk, nm_device_get_iface (dev), SIOCGIWRATE, &wrq);
 		close (sk);
 	}
 
@@ -1649,7 +1649,7 @@ NMNetworkMode nm_device_get_mode (NMDevice *dev)
 		struct iwreq	wrq;
 		int			err;
 
-		err = iw_set_ext (sk, nm_device_get_iface (dev), SIOCGIWMODE, &wrq);
+		err = iw_get_ext (sk, nm_device_get_iface (dev), SIOCGIWMODE, &wrq);
 		if (err == 0)
 		{
 			switch (wrq.u.mode)
@@ -1665,7 +1665,7 @@ NMNetworkMode nm_device_get_mode (NMDevice *dev)
 			}
 		}
 		else
-			syslog (LOG_ERR, "nm_device_get_mode (%s): error setting card to Infrastructure mode.  errno = %d", nm_device_get_iface (dev), errno);				
+			syslog (LOG_ERR, "nm_device_get_mode (%s): error getting card mode.  errno = %d", nm_device_get_iface (dev), errno);				
 		close (sk);
 	}
 
